ecep_assets/css/colors.css
@import url('https://cdn.jsdelivr.net/gh/TACC/Core-Styles@f2125cc1/dist/settings/color--cms.auto.css');
:root {
  /* GLOBAL */
  --tc-color-1: var(--ecep-purple); /* --global-color "accent" */
  --tc-color-2: var(--ecep-green); /* --global-color "secondary" */
  --tc-color-3: var(--ecep-green); /* --global-color "tertiary" */

  /* HEADER */
  /* https://github.com/TACC/Core-Styles/blob/v2.53.1/src/lib/_imports/core-styles.theme.default.css */
  --header-bkgd-color: var(--ecep-purple);
  --header-minor-border-color: var(--global-color-accent--xxx-light);
  --header-search-brdr-color: var(--global-color-accent--x-light);
  --header-search-bkgd-color: var(--global-color-accent--dark);
}

